--- a/settings.json
+++ b/settings.json
@@ -36,7 +36,7 @@
 
       "messages": [
         "Hi, I Want to eat.",
-        "My nickname is NEIDks",
+        "My nickname is UEIDks",
         "I want be alone...",
         "My screat is...secret!"
       ]
